test/files/neg/symbol-literal-deprecation.check
symbol-literal-deprecation.scala:4: warning: symbol literal is deprecated; use Symbol("TestSymbol") instead
  val foo = 'TestSymbol
            ^
1 warning
error: No warnings can be incurred under -Werror.
